test/functional/failtests/assignExpression.txt
SyntaxError: Unexpected token "=", expected ","
6 |     int:i = 1;
7 |     foo(i = 2);
  |           ^ (7:11)
8 | }

